-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206061 | 12 | Markus Grönlund | P1 | Resolved | Fixed | team |
| JDK-8206656 | 11.0.1 | Markus Grönlund | P1 | Resolved | Fixed | b01 |
jib > /scratch/mesos/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S254173/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70cd7ec0-bff3-4446-97a2-f1e9a55307c3/runs/b77e288a-453b-4179-848a-0bf55e5c79e9/workspace/open/src/hotspot/share/jfr/recorder/service/jfrOptionSet.cpp:686:19: error: variable 'XXStartFlightRecordingOption' is not needed and will not be emitted [-Werror,-Wunneeded-internal-declaration]
jib > static const char XXStartFlightRecordingOption[] = "-XX:StartFlightRecording";
jib > ^
jib > 1 error generated.
jib > lib/CompileJvm.gmk:149: recipe for target '/scratch/mesos/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S254173/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70cd7ec0-bff3-4446-97a2-f1e9a55307c3/runs/b77e288a-453b-4179-848a-0bf55e5c79e9/workspace/build/macosx-x64/hotspot/variant-server/libjvm/objs/jfrOptionSet.o' failed
jib > make[3]: *** [/scratch/mesos/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S254173/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70cd7ec0-bff3-4446-97a2-f1e9a55307c3/runs/b77e288a-453b-4179-848a-0bf55e5c79e9/workspace/build/macosx-x64/hotspot/variant-server/libjvm/objs/jfrOptionSet.o] Error 1
jib > make[3]: *** Waiting for unfinished jobs....
jib > make/Main.gmk:257: recipe for target 'hotspot-server-libs' failed
jib > make[2]: *** [hotspot-server-libs] Error 2
jib > make[2]: *** Waiting for unfinished jobs....
jib >
jib > ERROR: Build failed for target 'default (product-bundles test-bundles)' in configuration 'macosx-x64' (exit code 2)
jib > Stopping sjavac server
jib > static const char XXStartFlightRecordingOption[] = "-XX:StartFlightRecording";
jib > ^
jib > 1 error generated.
jib > lib/CompileJvm.gmk:149: recipe for target '/scratch/mesos/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S254173/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70cd7ec0-bff3-4446-97a2-f1e9a55307c3/runs/b77e288a-453b-4179-848a-0bf55e5c79e9/workspace/build/macosx-x64/hotspot/variant-server/libjvm/objs/jfrOptionSet.o' failed
jib > make[3]: *** [/scratch/mesos/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S254173/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70cd7ec0-bff3-4446-97a2-f1e9a55307c3/runs/b77e288a-453b-4179-848a-0bf55e5c79e9/workspace/build/macosx-x64/hotspot/variant-server/libjvm/objs/jfrOptionSet.o] Error 1
jib > make[3]: *** Waiting for unfinished jobs....
jib > make/Main.gmk:257: recipe for target 'hotspot-server-libs' failed
jib > make[2]: *** [hotspot-server-libs] Error 2
jib > make[2]: *** Waiting for unfinished jobs....
jib >
jib > ERROR: Build failed for target 'default (product-bundles test-bundles)' in configuration 'macosx-x64' (exit code 2)
jib > Stopping sjavac server
- backported by
-
JDK-8206061 JDK-8205906 broke the build on Mac
-
- Resolved
-
-
JDK-8206656 JDK-8205906 broke the build on Mac
-
- Resolved
-
- relates to
-
JDK-8205906 jdk.jfr.jcmd.TestJcmdDumpLimited fails due to erronous processing of -XX:FlightRecorderOptions
-
- Resolved
-