8205996: JDK-8205906 broke the build on Mac

Reviewed-by: thartmann, ehelin